fine css, creazione bottone e ricaricamento pagina

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1>EMAIL GENERATE</h1>
+        <ul id="Lista">
 
-    <ul id="Lista">
-
-    </ul>
-    <script src="js/script.js"></script>
+        </ul>
+        <button id="rigenera"> Rigenera </button>
+        <script src="js/script.js"></script>
+    </div>
 </body>
 
 </html>
